--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,23 @@
-== README
+= 社内SNS
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+ミーティングツールとコミュニティの管理を独自化するためのSNS
+開発に関わる方はslackにて会議
 
-Things you may want to cover:
+== 環境開発
 
-* Ruby version
+* Ruby 2.0以上
 
-* System dependencies
+* Rails 4.1.4
 
-* Configuration
+== 実装機能
 
-* Database creation
+* 会員機能
 
-* Database initialization
+* アイデア版
 
-* How to run the test suite
+* プロジェクト管理
 
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+* 既存のSNSタイムライン
 
 
-Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
